first batch of changes for C++20

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -6,7 +6,7 @@ enable_testing()
 
 add_subdirectory(3rd_party/google-test)
 
-set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
@@ -31,6 +31,7 @@ add_compile_options(
   -Wsign-conversion
   -Wconversion
   -Wdouble-promotion
+  -fconcepts-diagnostics-depth=5
   -fmax-errors=15)
 
 include_directories(../include/)
